Change colors to buttons operations

--- a/style.css
+++ b/style.css
@@ -26,3 +26,30 @@ button {
     background-color: #15ac29;
 }
 
+.c {
+    color: rgb(221, 11, 11);
+}
+
+.parentesis{
+    color: #15ac29;
+}
+
+.porcentaje{
+    color: #15ac29;
+}
+
+.division{
+    color: #15ac29;
+}
+
+.multiplicacion{
+    color: #15ac29;
+}
+
+.menos{
+    color: #15ac29;
+}
+
+.suma{
+    color: #15ac29;
+}
