--- a/style.css
+++ b/style.css
@@ -1,50 +1,65 @@
 .main {
-    border: black;
-    border-width: 5px;
-    border-style:outset;
-    width: max-content;
-    border-radius: 25px;
-    background-color: #0e0d0d;
+  border: black;
+  border-width: 5px;
+  border-style: outset;
+  width: max-content;
+  border-radius: 25px;
+  background-color: #0e0d0d;
 }
 
 .teclado {
-    background-color: black;
-    border-radius: 0px 0px 15px 15px;
+  background-color: black;
+  border-radius: 0px 0px 15px 15px;
 }
 
-.vista{
-    height: 50px;
-    width: max-content;
+.vista {
+  height: 50px;
+  width: max-content;
+  color: white;
 }
 
 button {
-    background-color: #0e0d0d; 
-    border: none;
-    color: white;
-    margin: 2px 2px 2px 2px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    font-size: 20px;
-    font-family: Cursive;
+  background-color: #0e0d0d;
+  border: none;
+  color: white;
+  margin: 2px 2px 2px 2px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  font-size: 20px;
+  font-family: Cursive;
 }
 
 .igual {
-    background-color: #15ac29;
+  background-color: #15ac29;
 }
 
-.c, .ce {
-    color: rgb(221, 11, 11);
+.c,
+.ce {
+  color: rgb(221, 11, 11);
 }
 
-.raiz, .mod, .potencia, .parentesis-izquierdo, .parentesis-derecho, .porcentaje, .division, .multiplicacion, .menos, .suma{
-    color: #15ac29;
+.raiz,
+.mod,
+.potencia,
+.parentesis-izquierdo,
+.parentesis-derecho,
+.porcentaje,
+.division,
+.multiplicacion,
+.menos,
+.suma {
+  color: #15ac29;
 }
 
-.seno, .coseno, .tangente, .pi, .exponencial {
-    color: #d0d319;
+.seno,
+.coseno,
+.tangente,
+.pi,
+.exponencial {
+  color: #d0d319;
 }
