--- a/style.css
+++ b/style.css
@@ -7,6 +7,13 @@
   background-color: #0e0d0d;
 }
 
+.muestra{
+  font-family: Cursive;
+  width: max-content;
+  color: white;
+  text-align: right;
+}
+
 .teclado {
   background-color: black;
   border-radius: 0px 0px 15px 15px;
